; ModuleID = '/home/carl/AnghaBench/redis/src/extr_db.c_scanDatabaseForReadyLists.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_db.c_scanDatabaseForReadyLists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }
%struct.TYPE_10__ = type { i64 }

@LOOKUP_NOTOUCH = common dso_local global i32 0, align 4
@OBJ_LIST = common dso_local global i64 0, align 8
@OBJ_STREAM = common dso_local global i64 0, align 8
@OBJ_ZSET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scanDatabaseForReadyLists(%struct.TYPE_11__* %0) #0 {
  %2 = alloca %struct.TYPE_11__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_10__*, align 8
  %6 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %2, align 8
  %7 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32* @dictGetSafeIterator(i32 %9)
  store i32* %10, i32** %4, align 8
  br label %11

11:                                               ; preds = %46, %1
  %12 = load i32*, i32** %4, align 8
  %13 = call i32* @dictNext(i32* %12)
  store i32* %13, i32** %3, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %47

15:                                               ; preds = %11
  %16 = load i32*, i32** %3, align 8
  %17 = call %struct.TYPE_10__* @dictGetKey(i32* %16)
  store %struct.TYPE_10__* %17, %struct.TYPE_10__** %5, align 8
  %18 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %19 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %20 = load i32, i32* @LOOKUP_NOTOUCH, align 4
  %21 = call %struct.TYPE_10__* @lookupKey(%struct.TYPE_11__* %18, %struct.TYPE_10__* %19, i32 %20)
  store %struct.TYPE_10__* %21, %struct.TYPE_10__** %6, align 8
  %22 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %23 = icmp ne %struct.TYPE_10__* %22, null
  br i1 %23, label %24, label %46

24:                                               ; preds = %15
  %25 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %26 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @OBJ_LIST, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %42, label %30

30:                                               ; preds = %24
  %31 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %32 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @OBJ_STREAM, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %42, label %36

36:                                               ; preds = %30
  %37 = load %struct.TYPE_10__*, %struct.TYPE_10__** %6, align 8
  %38 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* @OBJ_ZSET, align 8
  %41 = icmp eq i64 %39, %40
  br i1 %41, label %42, label %46

42:                                               ; preds = %36, %30, %24
  %43 = load %struct.TYPE_11__*, %struct.TYPE_11__** %2, align 8
  %44 = load %struct.TYPE_10__*, %struct.TYPE_10__** %5, align 8
  %45 = call i32 @signalKeyAsReady(%struct.TYPE_11__* %43, %struct.TYPE_10__* %44)
  br label %46

46:                                               ; preds = %42, %36, %15
  br label %11

47:                                               ; preds = %11
  %48 = load i32*, i32** %4, align 8
  %49 = call i32 @dictReleaseIterator(i32* %48)
  ret void
}

declare dso_local i32* @dictGetSafeIterator(i32) #1

declare dso_local i32* @dictNext(i32*) #1

declare dso_local %struct.TYPE_10__* @dictGetKey(i32*) #1

declare dso_local %struct.TYPE_10__* @lookupKey(%struct.TYPE_11__*, %struct.TYPE_10__*, i32) #1

declare dso_local i32 @signalKeyAsReady(%struct.TYPE_11__*, %struct.TYPE_10__*) #1

declare dso_local i32 @dictReleaseIterator(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
